Closed
Bug 514638
Opened 16 years ago
Closed 16 years ago
windowmediator should let go of its windows at xpcom-shutdown
Categories
(Core :: Widget, defect)
Core
Widget
Tracking
()
VERIFIED
FIXED
mozilla1.9.3a1
People
(Reporter: timeless, Assigned: timeless)
Details
Attachments
(1 file)
|
7.00 KB,
patch
|
benjamin
:
review+
|
Details | Diff | Splinter Review |
spun off from bug 464389 comment 23
so, brahmana tested, and quit-application is too early nsAppStartup or something uses it to close all windows.
Attachment #398626 -
Flags: review?(benjamin)
Updated•16 years ago
|
Attachment #398626 -
Flags: review?(benjamin) → review+
Updated•16 years ago
|
Flags: in-testsuite-
Updated•16 years ago
|
Keywords: checkin-needed
Comment 2•16 years ago
|
||
Status: NEW → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
Comment 3•15 years ago
|
||
Verifying per bug 464389 comment 27 / 28. (timeless tells me in IRC that successfully testing that bug without crashing is sufficient to verify this bug.)
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•