Bug 514638 windowmediator should let go of its windows at xpcom-shutdown r=bs